# compatibility

./: .coveragerc  .gitignore  AGENTS.md  CHANGELOG.md  README.md  compile_translations.py  pyproject.toml  pytest.ini  requirements.txt  salted-linkcheck.ini  setup.py  tests.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: coverage.yml  flake8.yml  linux-test.yml  macos-test.yml  mypy.yml  python-package.yml  python-pre-release.yml  release.yml  ruff.yml  windows-test.yml
compatibility/: __init__.py  __main__.py  _version.py  err.py  messages.py
compatibility/locales/de/LC_MESSAGES/: compatibility.po
compatibility/locales/es/LC_MESSAGES/: compatibility.po
compatibility/locales/fr/LC_MESSAGES/: compatibility.po
compatibility/locales/nl/LC_MESSAGES/: compatibility.po
locales/de/LC_MESSAGES/: compatibility.po
tests/: conftest.py  test_compatibility.py
