[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "compatibility"
version = "2.0.0"
description = "A library that checks whether the running version of Python is compatible and tested. Remind the user to check for updates of the library."
readme = "README.md"
authors = ["Rüdiger Voigt <projects@ruediger-voigt.eu>"]
license = "Apache-2.0"
homepage = "https://github.com/RuedigerVoigt/compatibility"
repository = "https://github.com/RuedigerVoigt/compatibility"
documentation = "https://github.com/RuedigerVoigt/compatibility"
keywords = ["compatibility", "version-check", "python-version", "testing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
    "Typing :: Typed",
]

# Force-include the compiled translation catalogs in the built distributions.
# The .mo files are gitignored (build outputs of compile_translations.py), so
# Poetry would otherwise exclude them. This override packages them anyway,
# provided they exist on disk at build time (CI compiles them before `poetry build`).
include = [
    { path = "compatibility/locales/**/*.mo", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
pytest-cov = "^7.1"
mypy = "^2.1"
ruff = "^0.15"
coverage = {extras = ["toml"], version = "^7.14"}

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/RuedigerVoigt/compatibility/issues"
"Changelog" = "https://github.com/RuedigerVoigt/compatibility/blob/main/CHANGELOG.md"

# Include py.typed marker file for PEP 561 compliance
[[tool.poetry.packages]]
include = "compatibility"

[tool.pytest.ini_options]
console_output_style = "classic"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v"]

[tool.coverage.run]
branch = true
cover_pylib = false
source = ["compatibility"]

[tool.coverage.html]
title = "Coverage Report for the compatibility Python Package"

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.10"
strict = true

[tool.ruff]
# Relaxed line length (the GitHub editor is 127 chars wide).
line-length = 127

[tool.ruff.lint]
# pyflakes (F), pycodestyle errors + warnings (E/W), flake8-bugbear (B), and
# mccabe complexity (C901). Replaces the previous flake8 setup; unlike the old
# flake8 job -- which ran the complexity check with --exit-zero so it never
# failed -- every selected rule is now actually enforced.
select = ["E", "F", "W", "B", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 10
