[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

# Standard PEP 621 project metadata. Poetry-specific build settings live under
# [tool.poetry] below.
[project]
name = "compatibility"
version = "2.1.0"
description = "A library that checks whether the running version of Python is compatible and tested. Remind the user to check for updates of the library."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Rüdiger Voigt", email = "projects@ruediger-voigt.eu" },
]
keywords = ["compatibility", "version-check", "python-version", "cross-platform", "update-notifier"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
    "Typing :: Typed",
]
# Zero runtime dependencies -- standard library only.
dependencies = []

# Development tooling. Install with `pip install -e ".[dev]"`; CI installs the
# same set so local and CI tooling stay aligned.
[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-cov>=7.1,<8",
    "mypy>=2.1,<3",
    "ruff>=0.15.16,<0.16",
    "coverage[toml]>=7.14.1,<8",
]

[project.urls]
Homepage = "https://github.com/RuedigerVoigt/compatibility"
Repository = "https://github.com/RuedigerVoigt/compatibility"
Documentation = "https://github.com/RuedigerVoigt/compatibility"
"Bug Tracker" = "https://github.com/RuedigerVoigt/compatibility/issues"
Changelog = "https://github.com/RuedigerVoigt/compatibility/blob/main/CHANGELOG.md"

[tool.poetry]
# Poetry-specific build settings only; package metadata is in [project] above.
# Include the py.typed marker (PEP 561) via the package directory.
packages = [{ include = "compatibility" }]
# Force-include the compiled translation catalogs in the built distributions.
# The .mo files are gitignored (build outputs of compile_translations.py), so
# Poetry would otherwise exclude them. This override packages them anyway,
# provided they exist on disk at build time (CI compiles them before `poetry build`).
include = [
    { path = "compatibility/locales/**/*.mo", format = ["sdist", "wheel"] },
]

[tool.pytest.ini_options]
console_output_style = "classic"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v"]

[tool.coverage.run]
branch = true
cover_pylib = false
source = ["compatibility"]

[tool.coverage.html]
title = "Coverage Report for the compatibility Python Package"

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.10"
strict = true

[tool.ruff]
# Relaxed line length (the GitHub editor is 127 chars wide).
line-length = 127

[tool.ruff.lint]
# pyflakes (F), pycodestyle errors + warnings (E/W), flake8-bugbear (B), and
# mccabe complexity (C901). Replaces the previous flake8 setup; unlike the old
# flake8 job -- which ran the complexity check with --exit-zero so it never
# failed -- every selected rule is now actually enforced.
select = ["E", "F", "W", "B", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 10
